--- a/css/styles.css
+++ b/css/styles.css
@@ -95,9 +95,10 @@ img {
   margin-left: 50px;
 }
 .menu-link {
+  position: relative;
   display: block;
   padding-top: 32px;
-  padding-bottom: 31px;
+  padding-bottom: 32px;
 
   text-decoration: none;
 
@@ -110,7 +111,18 @@ img {
 .active {
   color: var(--page-color-second);
 }
+.menu-link.active::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--page-color-second);
 
+}
 /*== Contacts ==*/
 .contacts-list {
   display: flex;
