--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ img {
 }
 .menu-link {
   position: relative;
+
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -103,6 +104,8 @@ img {
   text-decoration: none;
 
   color: rgb(33, 33, 33);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-link:hover,
 .menu-link:focus {
@@ -112,7 +115,7 @@ img {
   color: var(--page-color-second);
 }
 .menu-link.active::after {
-  content: "";
+  content: '';
   display: inline-block;
   position: absolute;
   bottom: -2px;
@@ -121,7 +124,6 @@ img {
   height: 4px;
   border-radius: 2px;
   background-color: var(--page-color-second);
-
 }
 /*== Contacts ==*/
 .contacts-list {
@@ -134,15 +136,15 @@ img {
   letter-spacing: 0.02em;
 }
 .contacts-link {
-  /* display: flex; */
-  display: block;
   padding-top: 32px;
-  padding-bottom: 31px;
+  padding-bottom: 32px;
 
   text-decoration: none;
 
   color: inherit;
   fill: var(--page-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-list .item {
   display: flex;
@@ -194,11 +196,15 @@ img {
   text-decoration: none;
 
   color: var(--page-color-first);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .post-link {
   text-decoration: none;
 
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .post-link:hover,
 .post-link:focus,
@@ -268,6 +274,8 @@ img {
   color: var(--page-color-first);
   background-color: var(--page-color-second);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -346,11 +354,22 @@ img {
   position: relative;
 }
 .workshop-item-disc {
-  display: inline-block;
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 70px;
 
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+
+  color: var(--page-color-first);
+  background-color: rgba(47, 48, 58, 0.8);
 }
 /*== Section Team ==*/
 .team {
@@ -412,6 +431,9 @@ img {
   border-radius: 50% 50%;
 
   fill: rgb(175, 177, 184);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list .social-link-icon {
   width: 20px;
@@ -435,11 +457,15 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+
   width: 170px;
   height: 92px;
   border: 1px solid rgb(175, 177, 184);
   border-radius: 4px;
   fill: rgb(175, 177, 184);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-item .clients-link:hover,
 .clients-item .clients-link:focus {
