--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,8 @@ img {
   letter-spacing: 0.02em;
 }
 .contacts-link {
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
