--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ img {
 /*== Logo ==*/
 .logo {
   width: 145px;
-  padding: 24px 0px;
+  padding: 24px 0 25px 0px;
 
   text-decoration: none;
   font-family: 'Raleway', sans-serif;
@@ -99,7 +99,7 @@ img {
 
   display: block;
   padding-top: 32px;
-  padding-bottom: 31px;
+  padding-bottom: 32px;
 
   text-decoration: none;
 
@@ -118,7 +118,7 @@ img {
   content: '';
   display: inline-block;
   position: absolute;
-  bottom: -2px;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
