--- a/css/styles.css
+++ b/css/styles.css
@@ -571,34 +571,86 @@ img {
 
   color: rgb(117, 117, 117);
 }
+
+.portfolio-link > .thumb {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 370px;
+  height: 294px;
+
+  padding-left: 24px;
+  padding-right: 24px;
+
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: var(--page-color-first);
+  background: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover .portfolio-overlay,
+.portfolio-link:focus .portfolio-overlay {
+  transform: translateY(0);
+}
 /* ===== Backdrop ===== */
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
 
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 50;
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotate(0deg);
 
   min-width: 528px;
   min-height: 581px;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 4px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  z-index: 100;
+
+  /* animation-name: modalOpen;
+  animation-duration: 500ms;
+  animation-timing-function: linear; */
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) rotate(-30deg);
 }
 .modal-close-bt {
   position: absolute;
@@ -618,35 +670,12 @@ img {
 
   cursor: pointer;
 }
-.portfolio-link > .thumb {
-  position: relative;
-  overflow: hidden;
-}
-.portfolio-overlay {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: 370px;
-  height: 294px;
-  padding-left: 24px;
-  padding-right: 24px;
-
-  font-size: 18px;
-  line-height: 1.56;
-
-  color: var(--page-color-first);
-  background: rgba(33, 150, 243, 0.9);
-
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-link:hover .portfolio-overlay,
-.portfolio-link:focus .portfolio-overlay {
-  transform: translateY(0);
+@keyframes modalOpen {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(-90deg);
+  }
 }
