--- a/css/styles.css
+++ b/css/styles.css
@@ -584,9 +584,10 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: auto;
 
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
 
   padding-left: 24px;
   padding-right: 24px;
@@ -671,11 +672,11 @@ img {
   cursor: pointer;
 }
 
-@keyframes modalOpen {
+/* @keyframes modalOpen {
   0% {
     transform: translate(-50%, -50%) rotate(0deg);
   }
   100% {
     transform: translate(-50%, -50%) rotate(-90deg);
   }
-}
+} */
