--- a/css/styles.css
+++ b/css/styles.css
@@ -665,7 +665,7 @@ img {
   width: 30px;
   height: 30px;
   padding: 0;
-  border-radius: 50% 50%;
+  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   background: #ffffff;
