--- a/css/styles.css
+++ b/css/styles.css
@@ -522,7 +522,7 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-/*Portfolio list*/
+/*=======Portfolio list=======*/
 .portfolio-list {
   margin-top: calc(-1 * var(--page-gap));
   margin-left: calc(-1 * var(--page-gap));
@@ -571,7 +571,6 @@ img {
 
   color: rgb(117, 117, 117);
 }
-
 .portfolio-link > .thumb {
   position: relative;
   overflow: hidden;
@@ -601,7 +600,6 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .portfolio-link:hover .portfolio-overlay,
 .portfolio-link:focus .portfolio-overlay {
   transform: translateY(0);
@@ -617,7 +615,8 @@ img {
 
   background: rgba(0, 0, 0, 0.2);
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -628,7 +627,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(0deg);
+  transform: translate(-50%, -50%) scale(1);
 
   min-width: 528px;
   min-height: 581px;
@@ -640,14 +639,10 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
-  /* animation-name: modalOpen;
-  animation-duration: 500ms;
-  animation-timing-function: linear; */
-
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) rotate(-30deg);
+  transform: translate(-50%, -50%) scale(1.4);
 }
 .modal-close-bt {
   position: absolute;
@@ -668,12 +663,3 @@ img {
 
   cursor: pointer;
 }
-
-/* @keyframes modalOpen {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(-90deg);
-  }
-} */
