--- a/css/styles.css
+++ b/css/styles.css
@@ -659,7 +659,7 @@ img {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
 
-  background: #ffffff;
+  background: transparent;
 
   cursor: pointer;
 }
